# book_reader

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
apps/analytics/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/analytics/migrations/: 0001_initial.py  0002_alter_useranalytic_avg_reading_time_and_more.py
apps/api/: urls.py
apps/auth/: apps.py  jwt_auth.py  managers.py  middleware.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
apps/auth/migrations/: 0001_initial.py
apps/books/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/books/migrations/: 0001_initial.py
apps/users/: serializers.py  test.py  tests.py  urls.py  views.py
apps_generic/whodidit/: middleware.py  models.py  test.py
apps_generic/whodidit/api/: serializers.py
book_reader/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/auth/registration/: register-confirm-email.html
utils/: encoding_values.py
